--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "mean",
-  "description": "MEAN - A Modern Stack: MongoDB, ExpressJS, AngularJS, NodeJS. (BONUS: Passport User Support).",
-  "version": "0.1.2",
-  "private": false,
-  "author": "Amos Haviv",
+  "name": "weaver-nodelua",
+  "description": "Weaver Engine - Collaboratively edited mmorpg engine ",
+  "version": "0.0.1",
+  "private": true,
+  "author": "Nathanael Jones",
   "repository": {
     "type": "git",
-    "url": "https://github.com/linnovate/mean.git"
+    "url": "https://github.com/nathanaeljones/weaver-nodelua.git"
   },
   "engines": {
     "node": "0.10.x",
