--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "grunt": "latest",
     "grunt-cli": "latest",
     "grunt-env": "latest",
-    "forever": "latest"
+    "forever": "latest",
+    "nodelua": "~0.3.1"
   },
   "devDependencies": {
     "supertest": "latest",
