Add node-uuid dependency

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "grunt-cli": "latest",
     "grunt-env": "latest",
     "forever": "latest",
-    "nodelua": "~0.3.1"
+    "nodelua": "~0.3.1",
+    "node-uuid": "~1.4.1"
   },
   "devDependencies": {
     "supertest": "latest",
